--- a/css/style.css
+++ b/css/style.css
@@ -45,9 +45,25 @@ body {
 }
 
 .box-1 {
-  background-color: #333;
+  width: 40%;
+  height: 100%;
 }
 
-.box-2 {
-  background-color: #777;
+.row-1{
+  height: 40%;
 }
+
+.row-content {
+    background-image: url(data_01.png);
+}
+
+.row-2{
+  height: 60%;
+}
+
+
+
+
+
+
+
