--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,9 @@ body {
 }
 
 .content {
-  font-size: 0;
   height: 100%;
   width: 100%;
+  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAAFCAYAAABmWJ3mAAAAQElEQVQYV2NkgIJrcdf+g5hai7QYb7bd/A8m1KvUGUESMEEQnxGkCqaaWYOZASQI1gGTAKkGsWEmgI1ANhumAwCLJS2rb2RY+AAAAABJRU5ErkJggg==);
 }
 
 .center {
@@ -45,25 +45,155 @@ body {
 }
 
 .box-1 {
-  width: 40%;
+  width: 25%;
   height: 100%;
+  margin-top: 18px;
+  margin-left: 18px;
 }
 
-.row-1{
+.row-1 {
   height: 40%;
+  width: 100%;
 }
 
-.row-content {
-    background-image: url(data_01.png);
+.row-1 img {
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover;
 }
 
-.row-2{
-  height: 60%;
+.row-2 { 
+  height: 30%;
+}
+
+.row-3 {
+  height:30%;
+  background-color: #f9d6ff;
+}
+
+.box-2 {
+  width: 25%;
+  height: 100%;
+  margin-left: 18px;
+}
+
+.row-4 {
+  height:20%;
+  background-color: transparent;
+}
+
+.row-5 {
+  height:30%;
+  background-color: pink;
+}
+
+.row-6 {
+  height:30%;
+  background-color: #cff6f9;
+}
+
+.row-7 {
+  height:20%;
+  background-color: #fcdcc4;
+}
+
+.box-3 {
+  width: 25%;
+  height: 100%;
+  margin-left: 18px;
+
+}
+
+.row-8 {
+  height:33.3%;
+}
+
+.row-9 {
+  height:33.3%;
+  background-color: transparent; 
+  font-family: 'Rubik', sans-serif; 
+  padding-top: 2px; 
+  padding-bottom: 2px; 
+  font-size: 3vw; 
+}
+
+.row-10 {
+  height:33.3%; 
+  background-color: #fffcc4; 
+}
+
+.box-4{
+  width: 25%; 
+  height: 100%; 
+}
+
+.row-11 {
+  height:30%; 
+  background-color: #ffbcc3; 
+}
+
+.row-12 {
+  height:30%;
+  background-color: #bceeff;
+}
+
+.row-13 {
+  height:20%;
+  background-color: #ffe8bc;
+}
+
+.row-14 {
+  height:20%;
+  background-color: #fdbcff;
+}
+
+.box-5{
+  width: 25%; 
+  height: 100%; 
+}
+
+.row-15 {
+  height:30%;
+  background-color: #ffbcc3;
+}
+
+.row-16 {
+  height:30%;
+  background-color: #bceeff;
+}
+
+.row-17 {
+  height:20%;
+  background-color: #ffe8bc;
+}
+
+.row-18 {
+  height:20%;
+  background-color: #fdbcff;
 }
 
 
+.box-6{
+  width: 25%; 
+  height: 100%; 
+}
 
+.row-19 {
+  height:30%;
+  background-color: #ffbcc3;
+}
 
+.row-20 {
+  height:30%;
+  background-color: #bceeff;
+}
 
+.row-21 {
+  height:20%;
+  background-color: #ffe8bc;
+}
 
-
+.row-22 {
+  height:20%;
+  background-color: #fdbcff;
+}
