--- a/css/style.css
+++ b/css/style.css
@@ -45,30 +45,47 @@ body {
 }
 
 .box-1 {
-  width: 25%;
+  width: 15%;
   height: 100%;
   margin-top: 18px;
   margin-left: 18px;
+  margin-bottom: 18px;
 }
 
 .row-1 {
-  height: 40%;
+  height: 30%;
   width: 100%;
 }
 
-.row-1 img {
-    width: 100%; 
-    height: 100%; 
-    object-fit: cover;
+.row-1 img { 
+  width: 100%; 
+  height: 100%; 
+  object-position: center;
+  object-fit: fill;
 }
 
 .row-2 { 
   height: 30%;
+  width: 100%;
+}
+
+.row-2 img { 
+  width: 100%; 
+  height: 100%; 
+  object-position: center;
+  object-fit: fill;
 }
 
 .row-3 {
-  height:30%;
-  background-color: #f9d6ff;
+  height:40%;
+  width: 100%;
+}
+
+.row-3 img { 
+  width: 100%; 
+  height: 100%; 
+  object-position: center;
+  object-fit: fill;
 }
 
 .box-2 {
@@ -79,48 +96,144 @@ body {
 
 .row-4 {
   height:20%;
-  background-color: transparent;
+}
+
+.row-4 img { 
+  width: 100%; 
+  height: 100%; 
+  object-position: center;
+  object-fit: fill;
 }
 
 .row-5 {
   height:30%;
-  background-color: pink;
+  width: 100%;
+}
+
+.row-5 img { 
+  width: 100%; 
+  height: 100%; 
+  object-position: center;
+  object-fit: fill;
 }
 
 .row-6 {
   height:30%;
-  background-color: #cff6f9;
+  width: 100%;
+}
+
+.row-6 img { 
+  width: 100%; 
+  height: 100%; 
+  object-position: center;
+  object-fit: fill;
 }
 
 .row-7 {
   height:20%;
-  background-color: #fcdcc4;
+  background-color: #1842cc;
+  font-family: 'Rubik', sans-serif; 
+  font-size: 2vw;
+  text-align: center;
+  padding-bottom: 2px;
+  padding-top: 9px;
+  padding-left: 4px;
+  padding-right: 4px;
 }
 
 .box-3 {
-  width: 25%;
+  width: 20%;
   height: 100%;
   margin-left: 18px;
-
 }
 
 .row-8 {
-  height:33.3%;
+  height: 33.3%;
+  width: 100%;
+}
+
+.row-8 img { 
+  width: 100%; 
+  height: 100%; 
+  object-position: center;
+  object-fit: fill;
 }
 
 .row-9 {
   height:33.3%;
-  background-color: transparent; 
   font-family: 'Rubik', sans-serif; 
-  padding-top: 2px; 
-  padding-bottom: 2px; 
-  font-size: 3vw; 
+  padding-top: 14px; 
+  padding-bottom: 2px;
+  padding-left: 4px;
+  padding-right: 4px;
+  font-size: 35px; 
+  background-color: #1842cc;
+  text-align: center;
 }
 
 .row-10 {
-  height:33.3%; 
-  background-color: #fffcc4; 
+  height: 33.3%; 
+  width: 100%
 }
 
+.row-10 img { 
+  width: 100%; 
+  height: 100%; 
+  object-position: center;
+  object-fit: fill;
+}
 
+.box-4 {
+  width: 20%;
+  height: 100%;
+  margin-left: 18px;
+}
+
+.row-11 {
+  height:20%;
+  font-family: 'Rubik', sans-serif; 
+  padding-top: 18px; 
+  padding-bottom: 2px;
+  padding-left: 6px;
+  padding-right: 6px;
+  font-size: 27px; 
+  background-color: #1842cc;
+  text-align: center;
+}
+
+.row-12 {
+  height: 30%; 
+  width: 100%
+}
+
+.row-12 img { 
+  width: 100%; 
+  height: 100%; 
+  object-position: center;
+  object-fit: fill;
+}
+
+.row-13 {
+  height: 30%; 
+  width: 100%
+}
+
+.row-13 img { 
+  width: 100%; 
+  height: 100%; 
+  object-position: center;
+  object-fit: fill;
+}
+
+.row-14 {
+  height: 20%; 
+  width: 100%
+}
+
+.row-14 img { 
+  width: 100%; 
+  height: 100%; 
+  object-position: center;
+  object-fit: fill;
+}
 
