--- a/css/style.css
+++ b/css/style.css
@@ -79,19 +79,22 @@ body {
 .row-3 {
   height:40%;
   width: 100%;
-}
-
-.row-3 img { 
-  width: 100%; 
-  height: 100%; 
-  object-position: center;
-  object-fit: fill;
+  background-color: #1842cc;
+  font-family: 'Rubik', sans-serif; 
+  font-size: 2vw;
+  text-align: center;
+  padding-bottom: 2px;
+  padding-top: 28px;
+  padding-left: 4px;
+  padding-right: 4px;
 }
 
 .box-2 {
-  width: 25%;
+  width: 20%;
   height: 100%;
   margin-left: 18px;
+  margin-top: 18px;
+
 }
 
 .row-4 {
@@ -133,18 +136,19 @@ body {
   height:20%;
   background-color: #1842cc;
   font-family: 'Rubik', sans-serif; 
-  font-size: 2vw;
+  font-size: 22px;
   text-align: center;
   padding-bottom: 2px;
-  padding-top: 9px;
-  padding-left: 4px;
-  padding-right: 4px;
+  padding-top: 15px;
+  padding-left: 8px;
+  padding-right: 8px;
 }
 
 .box-3 {
   width: 20%;
   height: 100%;
   margin-left: 18px;
+  margin-top: 18px;
 }
 
 .row-8 {
@@ -162,13 +166,14 @@ body {
 .row-9 {
   height:33.3%;
   font-family: 'Rubik', sans-serif; 
-  padding-top: 14px; 
+  padding-top: 16px; 
   padding-bottom: 2px;
   padding-left: 4px;
   padding-right: 4px;
   font-size: 35px; 
   background-color: #1842cc;
   text-align: center;
+  font-weight: bold;
 }
 
 .row-10 {
@@ -187,12 +192,13 @@ body {
   width: 20%;
   height: 100%;
   margin-left: 18px;
+  margin-top: 18px;
 }
 
 .row-11 {
   height:20%;
   font-family: 'Rubik', sans-serif; 
-  padding-top: 18px; 
+  padding-top: 25px; 
   padding-bottom: 2px;
   padding-left: 6px;
   padding-right: 6px;
@@ -237,3 +243,45 @@ body {
   object-fit: fill;
 }
 
+.box-5 {
+  width: 15%;
+  height: 100%;
+  margin-left: 18px;
+  margin-top: 18px;
+}
+
+.row-15 {
+  height: 40%; 
+  width: 100%
+}
+
+.row-15 img { 
+  width: 100%; 
+  height: 100%; 
+  object-position: center;
+  object-fit: fill;
+}
+
+.row-16 {
+  height: 30%; 
+  width: 100%
+}
+
+.row-16 img { 
+  width: 100%; 
+  height: 100%; 
+  object-position: center;
+  object-fit: fill;
+}
+
+.row-17 {
+  height:30%;
+  background-color: #1842cc;
+  font-family: 'Rubik', sans-serif; 
+  font-size: 25px;
+  text-align: center;
+  padding-bottom: 2px;
+  padding-top: 19px;
+  padding-left: 8px;
+  padding-right: 8px;
+}
