--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,12 @@ body {
   padding: 0;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAAFCAYAAABmWJ3mAAAAQElEQVQYV2NkgIJrcdf+g5hai7QYb7bd/A8m1KvUGUESMEEQnxGkCqaaWYOZASQI1gGTAKkGsWEmgI1ANhumAwCLJS2rb2RY+AAAAABJRU5ErkJggg==);
 }
 
 .content {
   height: 100%;
   width: 100%;
-  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAAFCAYAAABmWJ3mAAAAQElEQVQYV2NkgIJrcdf+g5hai7QYb7bd/A8m1KvUGUESMEEQnxGkCqaaWYOZASQI1gGTAKkGsWEmgI1ANhumAwCLJS2rb2RY+AAAAABJRU5ErkJggg==);
 }
 
 .center {
@@ -41,7 +40,7 @@ body {
 }
 
 .box-content {
-  font-size: 30px;
+  font-size: absolute;
 }
 
 .box-1 {
@@ -77,11 +76,11 @@ body {
 }
 
 .row-3 {
-  height:40%;
+  height: 40%;
   width: 100%;
   background-color: #1842cc;
   font-family: 'Rubik', sans-serif; 
-  font-size: 2vw;
+  font-size: absolute;
   text-align: center;
   padding-bottom: 2px;
   padding-top: 28px;
@@ -94,11 +93,11 @@ body {
   height: 100%;
   margin-left: 18px;
   margin-top: 18px;
-
 }
 
 .row-4 {
-  height:20%;
+  height: 20%;
+  width: 100%;
 }
 
 .row-4 img { 
@@ -109,7 +108,7 @@ body {
 }
 
 .row-5 {
-  height:30%;
+  height: 30%;
   width: 100%;
 }
 
@@ -121,7 +120,7 @@ body {
 }
 
 .row-6 {
-  height:30%;
+  height: 30%;
   width: 100%;
 }
 
@@ -133,10 +132,10 @@ body {
 }
 
 .row-7 {
-  height:20%;
+  height: 20%;
   background-color: #1842cc;
   font-family: 'Rubik', sans-serif; 
-  font-size: 22px;
+  font-size: absolute;
   text-align: center;
   padding-bottom: 2px;
   padding-top: 15px;
@@ -164,13 +163,13 @@ body {
 }
 
 .row-9 {
-  height:33.3%;
+  height: 33.3%;
   font-family: 'Rubik', sans-serif; 
   padding-top: 16px; 
   padding-bottom: 2px;
   padding-left: 4px;
   padding-right: 4px;
-  font-size: 35px; 
+  font-size: absolute; 
   background-color: #1842cc;
   text-align: center;
   font-weight: bold;
@@ -178,7 +177,7 @@ body {
 
 .row-10 {
   height: 33.3%; 
-  width: 100%
+  width: 100%;
 }
 
 .row-10 img { 
@@ -196,20 +195,20 @@ body {
 }
 
 .row-11 {
-  height:20%;
+  height: 20%;
   font-family: 'Rubik', sans-serif; 
   padding-top: 25px; 
   padding-bottom: 2px;
   padding-left: 6px;
   padding-right: 6px;
-  font-size: 27px; 
+  font-size: absolute; 
   background-color: #1842cc;
   text-align: center;
 }
 
 .row-12 {
   height: 30%; 
-  width: 100%
+  width: 100%;
 }
 
 .row-12 img { 
@@ -221,7 +220,7 @@ body {
 
 .row-13 {
   height: 30%; 
-  width: 100%
+  width: 100%;
 }
 
 .row-13 img { 
@@ -233,7 +232,7 @@ body {
 
 .row-14 {
   height: 20%; 
-  width: 100%
+  width: 100%;
 }
 
 .row-14 img { 
@@ -252,7 +251,7 @@ body {
 
 .row-15 {
   height: 40%; 
-  width: 100%
+  width: 100%;
 }
 
 .row-15 img { 
@@ -264,7 +263,7 @@ body {
 
 .row-16 {
   height: 30%; 
-  width: 100%
+  width: 100%;
 }
 
 .row-16 img { 
@@ -275,13 +274,74 @@ body {
 }
 
 .row-17 {
-  height:30%;
+  height: 30%;
   background-color: #1842cc;
   font-family: 'Rubik', sans-serif; 
-  font-size: 25px;
+  font-size: absolute;
   text-align: center;
   padding-bottom: 2px;
   padding-top: 19px;
   padding-left: 8px;
   padding-right: 8px;
 }
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 0px) and (max-width: 600px) {
+  .box {
+    width: 100%;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 600px) and (max-width: 768px) {
+  .box {
+    width: 100%;
+  }
+
+/* Large devices (laptops/desktops, 1025px and up) */
+@media only screen and (min-width: 768px) and (max-width: 1025px) {
+  .box-1 {
+    width: 15%;
+  }
+
+  .box-2 {
+    width: 20%;
+  }
+
+  .box-3 {
+    width: 20%;
+  }
+
+  .box-4 {
+    width: 20%;
+  }
+
+  .box-5 {
+    width: 15%;
+  }
+
+}
+/* Extra large devices (large laptops and desktops, 1400px and up) */
+@media only screen and (min-width: 1025px) and (max-width: 1400px) {
+  .box-1 {
+    width: 15%;
+  }
+
+  .box-2 {
+    width: 20%;
+  }
+
+  .box-3 {
+    width: 20%;
+  }
+
+  .box-4 {
+    width: 20%;
+  }
+
+  .box-5 {
+    width: 15%;
+  }
+
+}
+
